# fail-repro

./: Cargo.toml  wrangler.toml
src/: lib.rs
